--- a/doc/latex2/thesis.tex
+++ b/doc/latex2/thesis.tex
@@ -89,13 +89,22 @@
 \clearpage
 \include{theory}
 
-\chapter{Analysis}
+\chapter{Analysis}\label{chapter:analysis}
 \clearpage
 \include{analysis}
 
 \chapter{Physical application}
 \clearpage
 \include{application}
+
+\chapter{Results}
+\clearpage
+\include{results}
+
+\appendix
+\chapter{Appendix}
+\include{appendix}
+
 
 %-------Bibliography-------%
 \printbibliography
